[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
http = "0.2.9"
hyper = { version = "0.14.26", features = ["full"] }
mime_guess = "2.0.4"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.11.0"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.4"
tower = { version = "0.4.13", features = ["full"] }
