[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acme-lib = "0.9.1"
axum = "0.8.4"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
http = "1.3.1"
hyper = { version = "1.6.0", features = ["client", "full"] }
hyper-util = { version = "0.1.16", features = ["client-legacy"] }
mime_guess = "2.0.4"
rustls = { version = "0.23.31", features = ["ring"], default-features = false }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.11.0"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.9.4"
tower = { version = "0.5.2", features = ["full"] }
